--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 			<div id="landing-content">
 				<!--<h1>These are some words!</h1>-->
 				<img id="logo" src="img/landing/organicMattersLogo.svg">
+				<img id="logoButton" src="img/landing/OMButtonLogo.svg">
 
 				<h4 class="seven columns centered">Custom designs created with materials from the earth.</h4>
 			</div><!-- end landing-content -->
@@ -76,7 +77,12 @@
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 
 
-						<form action="." method="post">
+	                    <form action="https://www.etsy.com/listing/618472735/walnut-cutting-boards?ref=shop_home_active_2">
+						    <input type="submit" value="Buy now - $35" formtarget="_blank" />
+						</form>
+
+
+						<!--<form action="." method="post">
 					        <noscript>You must <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> in your web browser in order to pay via Stripe.</noscript>
 
 					        <input
@@ -110,7 +116,7 @@
 					            });
 					        });
 					        </script>
-						</form>
+						</form>-->
 					</li>
 
 
@@ -124,7 +130,12 @@
 	                    <a class="hipster" href="img/store/products/hipster/hipster2_1000.jpg"
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 
-						<form action="." method="post">
+	                    <form action="https://www.etsy.com/listing/605494072/hipster-block?ref=shop_home_active_1">
+						    <input type="submit" value="Buy now - $25" formtarget="_blank" />
+						</form>
+
+
+						<!--<form action="." method="post">
 							<noscript>You must <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> in your web browser in order to pay via Stripe.</noscript>
 
 							<input
@@ -158,7 +169,7 @@
 									});
 							});
 							</script>
-						</form>
+						</form>-->
 					</li>
 
 
@@ -176,7 +187,11 @@
 	                    <a class="analogAudio" href="img/store/products/analogAudio/analogAudio4_1000.jpg"
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 
-						<form action="." method="post">
+	                    <form action="https://www.etsy.com/listing/618480973/analog-audio?ref=listing-shop-header-0">
+						    <input type="submit" value="Buy now - $45" formtarget="_blank" />
+						</form>
+
+						<!--<form action="." method="post">
 					        <noscript>You must <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> in your web browser in order to pay via Stripe.</noscript>
 
 					        <input
@@ -210,22 +225,22 @@
 					            });
 					        });
 					        </script>
-						</form>
+						</form>-->
 					</li>
 
-					<li class="three column">
+					<!--<li class="three column">
 						<a class="vallet" href="img/store/products/vallet/vallet1_1000.jpg" alt="">
 							<img class="fadeIn" src="img/store/products/vallet/valletThumb.jpg">
-							<h4>Office Vallet</h4>
+							<h4>Office Valet</h4>
 						</a>
 
-						<!-- hidden thumbs  -->
+						<!-- hidden thumbs  
 	                    <a class="vallet" href="img/store/products/vallet/vallet2_1000.jpg"
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 	                    <a class="vallet" href="img/store/products/vallet/vallet3_1000.jpg"
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 
-						<form action="." method="post">
+						<!--<form action="." method="post">
 					        <noscript>You must <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> in your web browser in order to pay via Stripe.</noscript>
 
 					        <input
@@ -259,8 +274,8 @@
 					            });
 					        });
 					        </script>
-						</form>
-					</li>
+						</form>-->
+					<!--</li>-->
 
 					<li class="three column">
 						<a class="farmFlowers" href="img/store/products/farmFlowers/farmFlowers1_1000.jpg" alt="">
@@ -276,7 +291,12 @@
 	                    <a class="farmFlowers" href="img/store/products/farmFlowers/farmFlowers4_1000.jpg"
 	                    <img src="#" style="width:0; height: 0; display:none;" alt=""></a>
 
-						<form action="." method="post">
+	                    <form action="https://www.etsy.com/listing/605496812/farm-flower-bin?ref=shop_home_active_2">
+						    <input type="submit" value="Buy now - $30" formtarget="_blank" />
+						</form>
+
+
+						<!--<form action="." method="post">
 					        <noscript>You must <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> in your web browser in order to pay via Stripe.</noscript>
 
 					        <input
@@ -310,7 +330,7 @@
 					            });
 					        });
 					        </script>
-						</form>
+						</form>-->
 					</li>
 				</ul>
 			</div><!-- end store-content -->
@@ -322,7 +342,7 @@
 		<footer>
 			<ul>
 				<li class="fadeIn">
-					<a href="https://www.etsy.com/people/p9tzlq8f" target="_blank">
+					<a href="https://www.etsy.com/shop/OrganicMattersDesign?ref=search_shop_redirect" target="_blank">
 					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 				viewBox="0 0 27 27" style="enable-background:new 0 0 27 27;" xml:space="preserve">
 						<style type="text/css">
@@ -434,6 +454,8 @@
 		<script src="js/scrolline.js"></script>
 		<script src="js/scrollreveal.js"></script>
 		<script src="js/gallery.js"></script>
+
+
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120225713-1"></script>
